--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    :root {
+      --primary-color: #00a884;
+    }
+}
